--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
-	id 'fabric-loom' version '1.6-SNAPSHOT'
+	id 'fabric-loom' version '1.7-SNAPSHOT'
 	id 'maven-publish'
+	id "me.modmuss50.mod-publish-plugin" version "0.6.3"
 }
 
 version = project.mod_version
@@ -15,16 +16,19 @@ repositories {
 	// You should only use this when depending on other mods because
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
-	// for more information about repositories.
 	maven {
 		name = "Greenhouse Maven"
-		url = 'https://maven.greenhouseteam.dev/releases/'
+		url = 'https://repo.greenhouse.house/releases/'
 	}
-	maven { url = "https://mvn.devos.one/releases/" } // Porting Lib
+//  maven { url "https://mvn.devos.one/releases/" } // Porting Lib
 	maven {
-		url "https://maven.jamieswhiteshirt.com/libs-release" // Reach Entity Attributes (Required by Porting Lib)
+		name = "Greenhouse Maven (Snapshots)" // Temporary Porting Lib Fork for 1.21
+		url = 'https://repo.greenhouse.house/snapshots/'
+	}
+	maven {
+		url "https://jitpack.io/" // Fabric ASM
 		content {
-			includeGroup "com.jamieswhiteshirt"
+			excludeGroup "io.github.fabricators_of_create"
 		}
 	}
 }
@@ -38,19 +42,23 @@ dependencies {
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-	modImplementation "vectorwing:FarmersDelight:${project.delight_version}"
-}
-
-processResources {
-	inputs.property "version", project.version
-
-	filesMatching("fabric.mod.json") {
-		expand "version": project.version
+	modImplementation("vectorwing:FarmersDelight:${project.delight_version}") {
+		exclude(group: "net.fabricmc")
 	}
 }
 
+processResources {
+	def map = [
+		"name": project.mod_name,
+		"version": project.version
+	]
+
+	inputs.properties(map)
+	filesMatching("fabric.mod.json") { expand(map) }
+}
+
 tasks.withType(JavaCompile).configureEach {
-	it.options.release = 17
+	it.options.release = 21
 }
 
 java {
@@ -59,8 +67,8 @@ java {
 	// If you remove this line, sources will not be generated.
 	withSourcesJar()
 
-	sourceCompatibility = JavaVersion.VERSION_17
-	targetCompatibility = JavaVersion.VERSION_17
+	sourceCompatibility = JavaVersion.VERSION_21
+	targetCompatibility = JavaVersion.VERSION_21
 }
 
 jar {
@@ -83,5 +91,28 @@ publishing {
 		// Notice: This block does NOT have the same function as the block in the top level.
 		// The repositories here will be used for publishing your artifact, not for
 		// retrieving dependencies.
+	}
+}
+
+if (true || project.gradle.getProperties().get("modrinth_token") != null) {
+	publishMods {
+		File changelogFile = new File("CHANGELOG.md")
+
+		file = remapJar.archiveFile
+		changelog = changelogFile.exists() ? changelogFile.text : ""
+		type = STABLE
+		displayName = "${project.mod_name} ${project.mod_version}"
+		modLoaders.add("fabric")
+
+		modrinth {
+			accessToken = providers.gradleProperty("modrinth_token").get()
+			projectId = "AhcCiL7x"
+			minecraftVersionRange {
+				start = "1.21"
+				end = "1.21.1"
+			}
+			requires("fabric-api")
+			requires("farmers-delight-refabricated")
+		}
 	}
 }
