--- a/gradle.properties
+++ b/gradle.properties
@@ -4,15 +4,16 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.1
-yarn_mappings=1.20.1+build.10
-loader_version=0.15.7
+minecraft_version=1.21
+yarn_mappings=1.21+build.9
+loader_version=0.15.11
 
 # Mod Properties
-mod_version=1.0.1
-maven_group=com.chailotl.pumpkin_pie
-archives_base_name=pumpkin_pie
+mod_name=Pumpkin Pie Delight
+mod_version=1.0.1+1.21
+maven_group=com.chailotl.pumpkin_pie_delight
+archives_base_name=pumpkin_pie_delight
 
 # Dependencies
-fabric_version=0.92.0+1.20.1
-delight_version=1.20.1-2.0.13+refabricated
+fabric_version=0.101.2+1.21
+delight_version=1.21-2.1.6+refabricated
